# web

./: README.md  package.json  pnpm-lock.yaml
.github/workflows/: main-deploy.yaml
back/: .gitignore  Cargo.toml  README.md  template.env
back/src/: app_state.rs  logger.rs  main.rs
back/src/config/: mod.rs  oauth_42.rs
back/src/routes/: health_check.rs  mod.rs
back/src/routes/auth/: mod.rs
back/src/routes/auth/ft/: callback.rs  login.rs  mod.rs
back/src/session/: mod.rs
front/: eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
front/src/: App.vue  style.css
front/src/assets/images/: FoyerLogo.vue  FoyerLogoNeon.vue  foyerLogo.vue
front/src/assets/style/theme/: default.css  light.css
