[package]
name = "web-42-eats-api"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = "0.8"
## Asynchronous runtime
tokio = { version = "1", features = ["full"] }
## Middleware and utilities
tower = "0.5"

# Database client
sqlx = { version = "0.8", features = ["runtime-tokio"] }

# Serialization/Deserialization
serde = "1"
## JSON support
serde_json = "1"
